--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,3 +1,11 @@
 body{
   font-family: 'Arimo', sans-serif;
 }
+
+
+.box {
+  border: 1px solid rgba(0, 0, 0, 0.23);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  padding: 1em;
+  margin-bottom: 15px;
+}
